Committing whole app after UI modifications
Committing whole app after UI modifications

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -39,14 +39,14 @@
 
     <li class="dropdown notifications" uib-dropdown>
 
-      <a href class="dropdown-toggle" uib-dropdown-toggle>
+      <!-- <a href class="dropdown-toggle" uib-dropdown-toggle>
         <fa name="bell"></fa>
         <span class="badge bg-lightred">2</span>
-      </a>
+      </a> -->
 
       <div class="dropdown-menu pull-right with-arrow panel panel-default animated littleFadeInLeft" role="menu">
 
-        <div class="panel-heading">
+       <!--  <div class="panel-heading">
           You have <strong>2</strong> notifications
         </div>
 
@@ -64,9 +64,9 @@
                 <small class="text-muted">6 minutes ago</small>
               </div>
             </a>
-          </li>
+          </li> -->
 
-          <li class="list-group-item">
+       <!--    <li class="list-group-item">
             <a href="javascript:;" class="media">
               <div class="media-left">
                 <span class="media-object media-icon bg-primary">
@@ -78,9 +78,9 @@
                 <small class="text-muted">12 minutes ago</small>
               </div>
             </a>
-          </li>
+          </li> -->
 
-
+<!-- 
         </ul>
 
         <div class="panel-footer">
@@ -90,12 +90,12 @@
       </div>
 
     </li>
-
+ -->
     <li class="dropdown nav-profile" uib-dropdown>
 
-      <a href class="dropdown-toggle" uib-dropdown-toggle>
-        <img src="images/clokam.png" alt="" class="img-circle size-30x30">
-        <span>Chanakya Lokam <fa name="angle-down"></fa></span>
+      <a href class="dropdown-toggle" uib-dropdown-toggle >
+        <img src="images/random-avatar6.jpg" alt="" class="img-circle size-30x30">
+        <span>John Doe<fa name="angle-down"></fa></span>
       </a>
 
       <ul class="dropdown-menu animated littleFadeInRight" role="menu">
@@ -133,7 +133,6 @@
 
   </ul>
   <!-- Right-side navigation end -->
-
 
 
 </header>
