--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -30,7 +30,7 @@ text-decoration:none !important;
 			</ul>-->
 			<ul>
 			<li ui-sref-active="active"><a ui-sref="app.libraryList"><fa name="caret-right"></fa>Library Listing</a>
-			<li ui-sref-active="active"><a ui-sref="app.viewlibrary"><fa name="caret-right"></fa>View Library</a>
+			<li ui-sref-active="active"><a ui-sref="app.viewlibrary1"><fa name="caret-right"></fa>View Library</a>
           <!-- <li ui-sref-active="active"><a ui-sref="app.addlibrary"><fa name="caret-right"></fa>Create New</a></li>
             
 
