--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -41,50 +41,22 @@
                                     <tr>
                                       <th> Interface  Name </th>
                                       <th> Created Date </th>
-                                     <th> Last Update </th>
+                                     <th> Last Updated </th>
                                      
-                                      <th> <center>Environment </center></th>
-                                      <th> By </th>
+                                      <th>Environment</th>
+                                      <th> Created By </th>
                                     </tr>
-                                   <!--  <tr  >
-                                      <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
-                                      <td> 3 April 2017  </td>
-                                      <td> 08:04 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>DEV</center></td>
-                                      <td> Chanakya Lokam</td>
-                                    </tr>
-                                    <tr >
-                                      <td >NLA_FEDMNET_ORM</td>
-                                      <td> 4 April 2017 </td>
-                                      <td> 07:44 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>TEST</center></td>
-                                      <td>Chanakya Lokam</td>
-                                    </tr>
-                                    <tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-                                      <td>Siva Kusampudi</td>
-                                    </tr>
-                                    <tr>
-                                      <td>MGM_LOADEYTX_SET</td>
-                                      <td>10 April 2017 </td>
-                                      <td> 04:46 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>DEV</center></td>
-                                      <td>Arjun Kanniah</td>
-                                    </tr> -->
+                                  
 									<tr ng-repeat="x in interfaces | orderBy: '-updatedDate' | orderBy: '-updatedTime'">
 										<td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab"><a style="cursor:default">{{x.interface_name}}</a></span></font></td>
 										<td>{{x.createdDate || ''}} - {{x.createdtime || ''}} </td>
 										<td>{{x.updatedDate || ''}} - {{x.updatedTime || ''}} </td>
-										<td><center>DEV</center></td>
-										<td>Arjun Kanniah</td>
+										<td>{{x.Environment  | uppercase}}</td>
+										<td>{{x.By}}</td>
                                     </tr>
+
+
+
                                   </tbody>
                                 </table>
 
