--- a/app/views/tmpl/addinterface.html
+++ b/app/views/tmpl/addinterface.html
@@ -140,11 +140,11 @@ border: 3px solid #22beef !important;
 			  <!-- tile body-->
 			<div class="row tile-body">
 			<div class="col-sm-2">
-			 <button type="button" ng-click="myFunction1()" id="showAccordian"  return false;" class="btn btn-blue mb-10 col-sm-10 "><i class="fa fa-plus"></i> &nbsp<b> Add Flow</b></button>
+			 <button type="button" ng-click="myFunction1()" id="showAccordian"  return false;" class="btn btn-blue mb-10 col-sm-10" style="font-weight: 900"><i class="fa fa-plus"></i> &nbspAdd Flow</button>
 			</div>
 			<div class="col-sm-2">
 			<!-- <button type="button" ng-click="saveInterface()" class="btn btn-cyan mb-10 col-sm-10"><b>Save Interface</b></button>-->
-			<button ng-click="saveInterface()"  class="btn btn-cyan btn-ef btn-ef-7 btn-ef-7h mb-10 col-sm-12" activate-button="loading"><i id="btns" style="display:none;" class="fa fa-refresh fa-spin"></i><span id="load" style="position:relative;left:-15px;"><b>Save Interface</b></span></button>
+			<button ng-click="saveInterface()"  class="btn btn-cyan btn-ef btn-ef-7 btn-ef-7h mb-10 col-sm-12" activate-button="loading"><i id="btns" style="display:none;" class="fa fa-refresh fa-spin"></i><span id="load" style="position:relative;left:-13px;"><span style="font-weight: 900">Save Interface</span></button>
 			</div>
 			
 			
