--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -128,13 +128,13 @@ text-decoration:none !important;
           <div class="row">
             <!-- col -->
             <div class="col-md-6">
-              <h4 class="text-light">DevOps  <i class="fa fa-caret-up text-success"></i></h4>
+              <h4 class="text-light"> DevOps Server   <i class="fa fa-caret-up text-success"></i></h4>
               <uib-progressbar class="progress-xs not-rounded mb-0" value="20" type="primary"></uib-progressbar>
             </div>
             <!-- /col -->
             <!-- col -->
             <div class="col-md-6">
-              <h4 class="text-light"> mDash   <i class="fa fa-caret-down text-danger"></i></h4>
+              <h4 class="text-light">mDash Server  <i class="fa fa-caret-down text-danger"></i></h4>
               <uib-progressbar class="progress-xs not-rounded mb-0" value="90" type="primary"></uib-progressbar>
             </div>
             <!-- /col -->
@@ -240,7 +240,7 @@ document.getElementById("names2").style.backgroundColor="transparent";
 		  
 		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)" >
 
-              <a href uib-dropdown-toggle class="dropdown-toggle settings" id="information1"> Select Team Members <i class="fa fa-angle-down"></i></a>
+              <a href uib-dropdown-toggle class="dropdown-toggle settings" id="information1"> Team Members <i class="fa fa-angle-down"></i></a>
 <!--<div ng-controller="DashboardTeamMembers">
 <ul ng-repeat="x in teams">
 <li>{{x.label}}</li>
@@ -286,7 +286,7 @@ document.getElementById("names2").style.backgroundColor="transparent";
               </ul>
 
             </li>
-			
+          
 		  
 		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)">
 
@@ -379,7 +379,7 @@ document.getElementById("names2").style.backgroundColor="transparent";
 
 
         <!-- tile body -->
-        <div class="tile-body p-0">
+        <div class="tile-body p-0" style="overflow-y:scroll;height:360px;">
 
 
               <div class="tile-header dvd dvd-btm">
@@ -390,21 +390,22 @@ document.getElementById("names2").style.backgroundColor="transparent";
                 <tbody>
                   <tr>
                     <th> Flow Name </th>
-                    <th>  Job Date </th>
-                    <th>Result</th>
-                    <th>Environment</th>
-                    <th>Executed By</th>
+                    <th> Job Date </th>
+                  
+                    <th> <center>Result</center> </th>
+                    <th> <center>Environment </center></th>
+                    <th>Executed By </th>
                   </tr>
                   
 				  <tr ng-repeat="x in flowslog  | orderBy: '-updatedDate' | orderBy: '-updatedTime'">
 					  <td  ng-click="flow(x.flowname)"><font color="#616f77"><span class="tab"><a style="color:#2368a0 ";>{{x.flowname}}</a></span></font></td>
 					  <td> {{x.updatedDate || ''}} - {{x.updatedTime || ''}}</td>
-					  <td><i class="fa fa-square text-danger"></i>{{x.flowstatus}}</td>
-					  <td>{{x.Environment}}</td>
+					 <td align="center"><!-- {{x.result==null ? "IN PROGRESS": x.result}} -->
+										<span class="{{x.flowstatus == 'SUCCESS' ? 'fa fa-square text-success' : ((x.flowstatus == 'FAILURE' ? 'fa fa-square text-danger' : 'fa fa-square text-warning'))}}"></span></td>
+					  <td><center>{{x.Environment  | uppercase}}</center></td>
 					  <td>{{x.By}}</td>
 					</tr>
-				  
-     
+
                 </tbody>
               </table>
 
